--- a/app/views/prototypes/peter/qualification-type.html
+++ b/app/views/prototypes/peter/qualification-type.html
@@ -50,41 +50,47 @@
       <div id="sign-in-hint" class="govuk-hint">
         Select the main one
       </div>
+
+      <br>
+      
       <div class="govuk-radios">
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="radio-teach1" name="choose" type="radio" value="#">
+          <input class="govuk-radios__input" id="radio-teach1" name="teach" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="choose">
             Academic qualifications
-
-
           </label>
           <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-            For example, A levels and GCSE's
+            A levels and GCSE's
           </div>
         </div>
+
+        <br>
+
+
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="radio-teach2" name="sign-in" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
+          <input class="govuk-radios__input" id="radio-teach2" name="teach" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
           <label class="govuk-label govuk-radios__label" for="sign-in-2">
             Vocational programmes
-
-
           </label>
           <div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
-            For example, Apprenticeships, traineeships, T levels
+            Apprenticeships, traineeships, T levels
           </div>
         </div>
+
+        <br>
+
 
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="radio-teach3" name="sign-in" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
+          <input class="govuk-radios__input" id="radio-teach3" name="teach" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
           <label class="govuk-label govuk-radios__label" for="sign-in-2">
             Other learning programmes
-
-
           </label>
           <div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
-            For example, basic English and Maths, ESOL, SEN or supported learning, Preparation for work and life skills, Community learning and Family
+            Basic English and Maths, ESOL, SEN or supported learning, Preparation for work and life skills, Community learning and Family
           </div>
         </div>
+
+        
       </div>
   
     </fieldset>
