--- a/app/views/prototypes/peter/add.html
+++ b/app/views/prototypes/peter/add.html
@@ -305,56 +305,44 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="nationality" name="nationality" type="checkbox" value="british" aria-describedby="nationality-item-hint">
         <label class="govuk-label govuk-checkboxes__label" for="nationality">
-          English
-        </label>
-        <span id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
-          
-        </span>
-      </div>
-
-
-      <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="nationality" name="nationality" type="checkbox" value="british" aria-describedby="nationality-item-hint">
-        <label class="govuk-label govuk-checkboxes__label" for="nationality">
-          Welsh
-        </label>
-        <span id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
-          
-        </span>
-      </div>
-
-      <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="nationality" name="nationality" type="checkbox" value="british" aria-describedby="nationality-item-hint">
-        <label class="govuk-label govuk-checkboxes__label" for="nationality">
-          Scottish
-        </label>
-        <span id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
-          
-        </span>
-      </div>
-
-      <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="nationality" name="nationality" type="checkbox" value="british" aria-describedby="nationality-item-hint">
-        <label class="govuk-label govuk-checkboxes__label" for="nationality">
-          Northern Irish
-        </label>
-        <span id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
-          
-        </span>
-      </div>
-
-
-
-
-      <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="nationality-2" name="nationality" type="checkbox" value="irish">
-        <label class="govuk-label govuk-checkboxes__label" for="nationality-2">
           British
         </label>
+        <span id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
+          
+        </span>
       </div>
-      
 
-      
+
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="nationality" name="nationality" type="checkbox" value="british" aria-describedby="nationality-item-hint">
+        <label class="govuk-label govuk-checkboxes__label" for="nationality">
+          EU including Irish
+        </label>
+        <span id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
+          
+        </span>
+      </div>
+
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="nationality" name="nationality" type="checkbox" value="british" aria-describedby="nationality-item-hint">
+        <label class="govuk-label govuk-checkboxes__label" for="nationality">
+          Rest of the world
+        </label>
+        <span id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
+          
+        </span>
+      </div>
+
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="nationality" name="nationality" type="checkbox" value="british" aria-describedby="nationality-item-hint">
+        <label class="govuk-label govuk-checkboxes__label" for="nationality">
+          
+Prefer not to say
+        </label>
+        <span id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
+          
+        </span>
+      </div> 
       
      <div class="govuk-checkboxes" data-module="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
@@ -366,7 +354,7 @@
       <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional">
         <div class="govuk-form-group">
           <label class="govuk-label" for="contact-by-email">
-            Discribe 
+            Describe 
           </label>
           <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false">
         </div>
