--- a/app/views/prototypes/peter/add.html
+++ b/app/views/prototypes/peter/add.html
@@ -354,7 +354,7 @@ Prefer not to say
       <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional">
         <div class="govuk-form-group">
           <label class="govuk-label" for="contact-by-email">
-            Describe 
+            Nationality
           </label>
           <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false">
         </div>
