--- a/app/views/prototypes/peter/contracted-hours.html
+++ b/app/views/prototypes/peter/contracted-hours.html
@@ -57,6 +57,22 @@
 </div>
 
 <br>
+<div class="govuk-form-group">
+  <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
+   
+    <div class="govuk-checkboxes">
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
+        <label class="govuk-label govuk-checkboxes__label" for="waste">
+          They don't work contracted weekly hours
+        </label>
+      </div>
+      
+      
+    </div>
+
+  </fieldset>
+</div><br>
 
 
           <a href="fte" class="govuk-button show-continue" style="display: inline;">
