--- a/app/views/prototypes/peter/contracted-hours.html
+++ b/app/views/prototypes/peter/contracted-hours.html
@@ -37,7 +37,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        What are their weekly contracted hours?
+        What were their weekly contracted hours?
       </h1>
     </legend><br>
 
