--- a/app/views/prototypes/peter/english.html
+++ b/app/views/prototypes/peter/english.html
@@ -106,16 +106,31 @@
           Postgraduate degree or equivalent
         </span>
       </div>
-<div class="govuk-radios__item">
+
+      <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
-          Don't know
+          Level 8
         </label>
+        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          Doctorates, award, certificate diploma in strategic direction
+        </span>
+      </div>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
+          None
+        </label>
+
+        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          .
+        </span>
         </div>
 
-        <br>
+        
 
-       <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
+       <div class="govuk-radios govuk-radios--conditional" type="radio" data-module="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="how-contacted-conditional" name="how-contacted" type="radio" value="email" data-aria-controls="conditional-how-contacted-conditional">
         <label class="govuk-label govuk-radios__label" for="how-contacted-conditional">
