--- a/app/views/prototypes/peter/what-teaching-qualification.html
+++ b/app/views/prototypes/peter/what-teaching-qualification.html
@@ -103,6 +103,9 @@
         <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
           Don't hold a teaching qualification
         </label>
+        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          .
+        </span>
         
       </div>
 
@@ -111,6 +114,9 @@
         <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
           Working towards a teaching qualification
         </label>
+        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+          .
+        </span>
       </div>
 
       <div class="govuk-radios__item">
