--- a/app/views/prototypes/peter/contracted-hours.html
+++ b/app/views/prototypes/peter/contracted-hours.html
@@ -64,7 +64,7 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          They don't work contracted weekly hours
+          They don't work contracted hours
         </label>
       </div>
       
